osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_secret_data/test_secret_type_fails_call[with-regular].txt
error: assignments can not include non-extractable features if they are not marked Secret
--> main.sml:3:0
     |
   3 | CallFoo = StringClean(s=Foo)
     | ^ name 'CallFoo' is not marked as non-extractable